# tg-andev

./: .gitignore  README.md  bot.py  db.py  feeds.txt  feeds_checker.py  pyproject.toml  requirements.txt  rss.py  telegram.py
.github/workflows/: feeds_checker.yml  forced_walker.yml  pythonapp.yml  walker.yml
