[tool.poetry]
name = "tg-andev"
version = "0.1.0"
description = ""
authors = ["runo280 <runo280@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tg_andev"}]

[tool.poetry.dependencies]
python = "^3.10"
dnspython = "^2.2.1"
chardet = "^5.1.0"
certifi = "^2022.12.7"
feedparser = "^6.0.10"
idna = "^3.4"
pymongo = "^4.3.3"
requests = "^2.28.1"
urllib3 = "^1.26.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
